# aiorise

./: .gitignore  Makefile  pyproject.toml
aiorise/actions/: action.py
aiorise/api/: client.py  client_methods.py  protocols.py  request_types.py  response_types.py
aiorise/bot/: bot.py
aiorise/codegen/: codegen.py  generate_api_requests.py  generate_event_types.py  generate_object_types.py  generate_request_types.py  generate_response_types.py
aiorise/connection/: __init__.py  connection.py
aiorise/events/: event.py  event_context.py  event_types.py  event_wrapper.py
aiorise/filters/: filter.py
aiorise/handlers/: __init__.py  handler.py
aiorise/objects/: object_types.py
