[tool.poetry]
name = "aiorise"
version = "0.1.0"
description = ""
authors = ["Albert <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
pydantic = "^2.1.1"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
